--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@
 
 body {
     padding-top: 3rem;
-    padding-bottom: 3rem;
+    
     color: #5a5a5a;
+    font-family: 'Rubik', sans-serif;
   }
+
+  
   
   
   /* CUSTOMIZE THE CAROUSEL
@@ -15,16 +18,35 @@ body {
   /* Carousel base class */
   .carousel {
     margin-bottom: 4rem;
+    
+    
   }
+
+  .carousel img {
+    position: absolute;
+    filter: brightness(65%);
+    background-position: bottom;
+    background-size: cover;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: auto;
+    height: 100%;
+    object-fit: cover;
+  }
+
+
   /* Since positioning the image, we need to help out the caption */
   .carousel-caption {
-    bottom: 3rem;
+    bottom: 2rem;
     z-index: 10;
   }
   
   /* Declare heights because of positioning of img element */
   .carousel-item {
-    height: 32rem;
+    height: 35rem;
+    
   }
   
   
@@ -57,12 +79,104 @@ body {
     letter-spacing: -.05rem;
   }
   
+  .Contacto {
+    display: flex;
+    margin: auto;
+    width: 90%;
+  }
+
+  .Contacto .form {
+    width: 100%;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  .Contacto .Imagen{
+    width: 100%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+  
+
+  .Contacto .Imagen div{
+    height: 90%;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .Contacto .Imagen img {
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+   
+    
+  }
+
+  .Contacto .Imagen img {
+    width: 100%;
+    position: relative;
+    object-fit: cover;
+   
+    
+  }
+.container > .crop {
+    
+}
+
+
+footer{
+  background-color: #f8f9fa;
+  height: 20%;
+  text-align: center;
+  padding: 1rem;
+  color: #212529;
+  margin-top: 2rem;
+}
+  
+
+
+  
+  
   /* rtl:end:remove */
   
   /* RESPONSIVE CSS
   -------------------------------------------------- */
+  @media (max-width: 600px){
+    .carousel img {
+      position: absolute;
+      filter: brightness(65%);
+      background-position: bottom;
+      background-size: cover;
+      bottom: 0;
+      top: 0;
+      right: 0;
+      left: 0;
+      width: auto;
+      height: 100%;
+      object-fit: cover;
+      
+    }
+    .Contacto {
+      display: flex;
+      flex-direction: column;
+      margin: auto;
+      width: 90%;
+    }
   
+    .Contacto .form {
+      width: 100%;
+      margin-left: 0%;
+      margin-right: 0%;
+    }
+    .Contacto .Imagen{
+      width: 100%;
+      margin-left: 0%;
+      margin-right: 0%;
+  }
+  }
+
   @media (min-width: 40em) {
+    
     /* Bump up size of carousel content */
     .carousel-caption p {
       margin-bottom: 1.25rem;
@@ -79,4 +193,5 @@ body {
     .featurette-heading {
       margin-top: 7rem;
     }
+    
   }
