--- a/style.css
+++ b/style.css
@@ -62,7 +62,9 @@ body {
   }
 
   
-  
+  .zoom:hover{
+    transform: scale(1.1);
+  } 
   
   /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
@@ -236,7 +238,7 @@ footer{
 }
 
 .ImplementacionAlbum {
-  padding-top: 5rem;
+  padding-top: 2rem;
   display: flex;
   
   margin: auto;
