--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ body {
     
   }
 
+  
   .carousel img {
     position: absolute;
     filter: brightness(65%);
@@ -326,7 +327,7 @@ footer{
   }
 
   .ImplementacionAlbum {
-    padding-top: 5rem;
+    padding-top: 0rem;
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -344,8 +345,15 @@ footer{
     left: -100px;
     position: relative;
     object-fit: cover;
-   
+    border: 0px solid #AFC97E;
     
+  }
+
+  .zoom{
+    border: 4px solid #f8f9fa ;
+  }
+  .zoom:hover{
+    transform: scale(1.05);
   }
 
   
